--- a/.gitignore
+++ b/.gitignore
@@ -11,35 +11,28 @@ obj/
 *.db
 *.sqlite
 *.log
-
-# diğer geçici dosyalar
-*.tmp
-*.cache
-# Visual Studio dosyaları
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
 
-# .NET bin ve obj klasörleri
-bin/
-obj/
-
 # Diğer yaygın dosyalar
 *.DS_Store
-*.vscode/
-.env
-# Geçici dosyalar
-.DS_Store
 *.dmg
 *.iso
 
-# Kullanıcı ayarları ve cache dosyaları
+# Geçici ve cache dosyaları
+*.tmp
 *.cache
 .idea/
-.vscode/
-*.suo
-*.user
+.env
+
+# Kullanıcı ayarları
 *.log
-.DS_Store 
-*.swp .zcompdump* .zsh_sessions/ .Trash/ .cache/ .local/ .npm/ .vscode/ 
+*.swp
+.zcompdump*
+.zsh_sessions/
+.Trash/
+.local/
+.npm/
+.vscode/
