--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50320",
+      "applicationUrl": "http://localhost:7053;http://localhost:50320",
       "sslPort": 44368
     }
   },
